Closed
Bug 866916
Opened 12 years ago
Closed 12 years ago
JavaScript JS_MORE_DETERMINISTIC builds are busted
Categories
(Core :: JavaScript Engine, defect)
Core
JavaScript Engine
Tracking
()
RESOLVED
FIXED
mozilla23
People
(Reporter: gkw, Assigned: gkw)
References
Details
(Keywords: regression)
Attachments
(2 files, 1 obsolete file)
3.94 KB,
text/plain
|
Details | |
585 bytes,
patch
|
sfink
:
review+
|
Details | Diff | Splinter Review |
JavaScript JS_MORE_DETERMINISTIC builds are busted, see stack. It wasn't broken last week.
![]() |
Assignee | |
Comment 2•12 years ago
|
||
Double confirmed:
autoBisect shows this is probably related to the following changeset:
The first bad revision is:
changeset: 130017:9ab1119d4596
user: Nicholas Nethercote
date: Tue Apr 23 23:44:36 2013 -0700
summary: Bug 634839 (part 1) - Remove unnecessary headers (as found by include-what-you-use) from js/src/jsfoo.cpp files. r=luke.
![]() |
Assignee | |
Comment 3•12 years ago
|
||
![]() |
Assignee | |
Comment 4•12 years ago
|
||
Removed the ifdef as recommended by sfink in-person, ifdefs are ugly.
Attachment #743303 -
Attachment is obsolete: true
Attachment #743303 -
Flags: review?(sphink)
Comment 5•12 years ago
|
||
Comment on attachment 743305 [details] [diff] [review]
patch v2 - ifdefs are unnecessary
Review of attachment 743305 [details] [diff] [review]:
-----------------------------------------------------------------
Sorry for the delay. Rebuilding my computer.
Attachment #743305 -
Flags: review+
![]() |
Assignee | |
Comment 6•12 years ago
|
||
Comment 7•12 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla23
You need to log in
before you can comment on or make changes to this bug.
Description
•