Bug 866916 - JavaScript JS_MORE_DETERMINISTIC builds are busted. r=sfink